@@ -321,6 +321,9 @@ HISTORY
 
   ++ Bugfixes:
 
+  2016-07-20: Simon Goldschmidt
+  * memp.h/.c: fixed bug #48442 (memp stats don't work for MEMP_MEM_MALLOC)
+
   2016-07-21: Simon Goldschmidt (patch by Ambroz Bizjak)
   * tcp_in.c, tcp_out.c: fixed bug #48543 (TCP sent callback may prematurely
     report sent data when only part of a segment is acked) and don't include
